Solved or ignored all warnings